--- a/package.json
+++ b/package.json
@@ -1,49 +1,49 @@
 {
-    "name": "repssets",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "android": "concurrently \"npx react-native start\" \"npx react-native run-android\"",
-        "ios": "react-native run-ios",
-        "start": "react-native start",
-        "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
-    },
-    "dependencies": {
-        "moti": "^0.18.0",
-        "react": "18.0.0",
-        "react-native": "0.69.4",
-        "react-native-reanimated": "^2.9.1",
-        "styled-components": "^5.3.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9",
-        "@babel/runtime": "^7.12.5",
-        "@react-native-community/eslint-config": "^2.0.0",
-        "@tsconfig/react-native": "^2.0.2",
-        "@types/jest": "^26.0.23",
-        "@types/react-native": "^0.69.3",
-        "@types/react-test-renderer": "^18.0.0",
-        "@types/styled-components": "^5.1.26",
-        "@typescript-eslint/eslint-plugin": "^5.29.0",
-        "@typescript-eslint/parser": "^5.29.0",
-        "babel-jest": "^26.6.3",
-        "concurrently": "^7.3.0",
-        "eslint": "^7.32.0",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "^0.70.3",
-        "react-test-renderer": "18.0.0",
-        "typescript": "^4.4.4"
-    },
-    "jest": {
-        "preset": "react-native",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ]
-    }
+  "name": "repssets",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
+  "dependencies": {
+    "moti": "^0.18.0",
+    "react": "18.0.0",
+    "react-native": "0.69.4",
+    "react-native-reanimated": "^2.9.1",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^26.0.23",
+    "@types/react-native": "^0.69.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "babel-jest": "^26.6.3",
+    "concurrently": "^7.3.0",
+    "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.70.3",
+    "react-test-renderer": "18.0.0",
+    "typescript": "^4.4.4"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
